# sbdots

./: .gitignore  .gitmessage  CHANGELOG.md  PKGBUILD  README.md  install.sh  p.txt  package.json  pyproject.toml
.github/workflows/: ruff_action.yml
awdaw/: sbdots.py  sbdots_actions.py  sbdotsctl.py  test.py
awdaw/actions/: get_available_updates.py  get_hypridle_status.py  get_weather_data.py  on_media_change.py  on_wallpaper_change.py  toggle_hypridle_proc.py  toggle_hyprshade_filter.py
awdaw/cli/ui/: cli_utils.py  console.py
awdaw/core/: command.py  fs_ops.py  notify.py  packages.py  process.py  updates.py  waybarctl.py
awdaw/core/system/: sys_info.py
awdaw/daemons/: actions_d.py  cliplistener_d.py
awdaw/lifecycle/: installer.py
awdaw/lifecycle/components/: auto_power_saver.py  dotfiles.py  packages.py  wallpapers.py
awdaw/lifecycle/postinstall/: start_service.py
awdaw/utils/: __init__.py  config_utils.py  exceptions.py  get_version.py  logger.py  paths.py
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/configurations/: keybinds.md
docs/getting_started/: installation.md  overview.md  packages.md
docs/pages/: screenshots.md
dotfiles/.config/: starship_old.toml
dotfiles/.config/btop/: btop.conf
dotfiles/.config/fastfetch/: config.jsonc
dotfiles/.config/fish/: config.fish  fish_variables
dotfiles/.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
dotfiles/.config/swaync/: style.css
dotfiles/.config/waybar/: modules.jsonc
dotfiles/.config/waypaper/: config.ini
dotfiles/.config/wlogout/: style.css
dotfiles/configs/atuin/: config.toml
lib/: actionsc.py  actionsd.py  sbdots.py  sbdots_actions.py  sbdotsctl.py
lib/actions/: get_hypridle_status.py  get_weather_data.py  on_check_updates.py  on_get_weather.py  on_mpd_change.py  on_wallpaper_change.py  toggle_hypridle_procs.py  toggle_hyprshade_filter.py
lib/coreapi/: updates.py  waybarctl.py
lib/daemons/: actions_d.py  clipboard_d.py
lib/lifecycle/: installer.py  uninstaller.py  updater.py
lib/utils/: errors.py  logger.py  paths.py
packaging/archlinux/: PKGBUILD
services/: sbdots-actions.service  sbdots-clipboard-listener.service
services/system/: sbdots-example.service
services/user/: sbdots-actionsd.service  sbdots-clipboard-listenerd.service
setup/: setup.py
src/sbdots/: __init__.py  constants.py  sbdots.py  sbdots_actions.py  sbdotsctl.py
tests/: test_config.py  test_config_ConfigResolvedDict.py  test_lib_commands.py  test_lib_config_ConfigResolvedDict.py  test_lib_config_OneLevelFlatDict.py  test_lib_config_utils.py  test_lib_config_utils_rich.py  test_lib_fs_ops.py  test_lib_logger.py  test_lib_notify.py  test_lib_pkg_utils.py  test_lib_procs_utils.py
(+138 files in other folders)
