[project]
name = "SBDots"
version = "0.0.3-alpha"
description = "A Modern, Feature-Rich, and Polished Hyprland Setup"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Saifullah Balghari", email = "balgharisaifullah@gmail.com" },
]

license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]

dependencies = [
    "partial>=1.0",
    "psutil>=7.1.3",
    "pyfiglet>=1.0.4",
    "pygobject>=3.54.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
